...
      },
      style: FilledButton.styleFrom(
        backgroundColor: Colors.white,
        padding: const EdgeInsets.symmetric(horizontal: 15),
        minimumSize: const Size(0, 35),
      ),
      child: const MyCustomText(text: 'オーダーを見る', fontSize: 16.0, fontWeight: FontWeight.w500),
    );
  }

  /// 注文詳細画面へ遷移
  Future<void> _navigateToOrderDetail(BuildContext context) async {
    try {
...
      },
      style: FilledButton.styleFrom(
        backgroundColor: Colors.white,
        padding: const EdgeInsets.symmetric(horizontal: 20),
        minimumSize: const Size(0, 35), //垂直方向の余白調整
      ),
      child: const MyCustomText(text: 'オーダーする', fontSize: 16.0, fontWeight: FontWeight.w500),
    );
  }
}

/// 画像
class _MobileOrderImage extends StatelessWidget {
...
