...

  @override
  Widget build(BuildContext context) {
    return FixedHeaderCommonComponent(
      isLeadingIcon: true,
      icon: Icon(Icons.arrow_back_ios),
      headerText: '履歴詳細',
      isFab: true,
      fabWidget: _ReOrderButton(orderHistory: orderHistory),
      onIconPressed: () {
        // 履歴タブ（インデックス1）を表示して戻る
        context.go('${MobileOrderTabContainer.routeName}?tab=1');
      },
...
