...
            const MyCustomText(text: '￥384', fontSize: 24, fontWeight: FontWeight.w500),
            Column(
              crossAxisAlignment: .end,
              spacing: 1,
              children: [
                const MyCustomText(
                  text: '残高更新',
                  textColor: Colors.green,
                  fontWeight: FontWeight.bold,
                  fontSize: 16,
                ),
                MyCustomText(text: getCurrentDateTime(), textColor: Colors.grey, fontSize: 15),
              ],
...
